cmake_minimum_required(VERSION 3.4.1)

if (NOT DEFINED MODULE_NAME)
    message(FATAL_ERROR "MODULE_NAME is not set")
else ()
    project(${MODULE_NAME})
endif ()


message("Build type: ${CMAKE_BUILD_TYPE}")

set(CMAKE_CXX_STANDARD 17)

set(LINKER_FLAGS "-ffixed-x18 -Wl,--hash-style=both")
set(C_FLAGS "-Werror=format -fdata-sections -ffunction-sections")
set(CXX_FLAGS "${CXX_FLAGS} -fno-exceptions -fno-rtti")

if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(C_FLAGS "${C_FLAGS} -O2 -fvisibility=hidden -fvisibility-inlines-hidden")
    set(LINKER_FLAGS "${LINKER_FLAGS} -Wl,-exclude-libs,ALL -Wl,--gc-sections -Wl,--strip-all")
else ()
    set(C_FLAGS "${C_FLAGS} -O0")
endif ()

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_FLAGS} ${CXX_FLAGS}")

set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${LINKER_FLAGS}")
set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${LINKER_FLAGS}")

# find_package(REQUIRED CONFIG)

add_library(${MODULE_NAME} SHARED 
            pixelify.cpp
            module.h)
target_link_libraries(${MODULE_NAME} log)

add_library(${MODULE_NAME}-tensor SHARED
            tensor.cpp
            module.h)
target_link_libraries(${MODULE_NAME}-tensor log)

# Output: out/<ABI>/*.so
set(OUTPUT_LIB_ROOT "${CMAKE_SOURCE_DIR}/../../../../out")

function(copy_and_strip_library target output_path)
    # Ensure output directory exists
    get_filename_component(output_dir "${output_path}" DIRECTORY)
    add_custom_command(TARGET ${target} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E make_directory "${output_dir}"
            VERBATIM
    )

    # Strip symbols only if CMAKE_STRIP is defined and not Debug
    if(CMAKE_STRIP)
        if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
            add_custom_command(TARGET ${target} POST_BUILD
                    COMMAND "${CMAKE_STRIP}" --strip-all --remove-section=.comment "$<TARGET_FILE:${target}>"
                    VERBATIM
            )
        endif()
    endif()

    # Copy the library to the desired location
    add_custom_command(TARGET ${target} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE:${target}>" "${output_path}"
            VERBATIM
    )
endfunction()

# Output .so → out/<ABI>/<abi>.so
copy_and_strip_library(${MODULE_NAME} "${OUTPUT_LIB_ROOT}/${ANDROID_ABI}/${ANDROID_ABI}.so")
